--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LedgerTracker - Secure Finance Manager</title>
+    <title>Ledger Tracker - Secure Finance Manager | Fully Offline & Highly Secured</title>
     <meta name="description" content="LedgerTracker - Your secure, offline-first personal finance manager for Bangladesh. Track expenses, income, and budgets with complete privacy." />
     <meta name="author" content="LedgerTracker" />
     <meta name="keywords" content="expense tracker, finance manager, bangladesh, taka, budget, offline, secure, privacy" />
